# DedupOnlineMigration

./: README.md
Experiments/: README.md
Experiments/Graph-generator/: LetItSlide-graph_generator.ipynb
Greedy-based/: GreedyLoadBalancerUnited.cpp
HC-BasedAlgorithms/: Node.cpp
HC-BasedAlgorithms/Calculator/: Calculator.hpp
HC-BasedAlgorithms/Shared/: AlgorithmDSManager.hpp  Utility.hpp
HC-based/: .gitignore  CMakeLists.txt  HierarchicalClustering.hpp
HC-based/Calculator/: Cache.hpp  Calculator.cpp
HC-based/Shared/: CommandLineParser.cpp  CommandLineParser.hpp  MigrationPlan.cpp  MigrationPlan.hpp
OnlineAlgorithms/Greedy/: GreedyLoadBalancerUnited.cpp  README.md  greedy_union_result.py  run_greedy_exp.py
OnlineAlgorithms/HC/: .gitignore  CMakeLists.txt  HierarchicalClustering.cpp  Main.cpp  Node.hpp  README.md  hc_union_result.py  run_exp.py
OnlineAlgorithms/HC/Calculator/: Cache.cpp  Lock.cpp  Lock.hpp  ScopeGuard.hpp  Utils.cpp  Utils.hpp  VolumeCalcInfo.cpp  VolumeCalcInfo.hpp
OnlineAlgorithms/HC/Shared/: AlgorithmDSManager.cpp  GreedySplit.cpp  GreedySplit.hpp  Utility.cpp
SystemsAndChangesCreation/: CMakeLists.txt  README.md
SystemsAndChangesCreation/Common/: Config.hpp  FileLinesIterator.cpp  FileLinesIterator.hpp  Structs.hpp  Utility.hpp  VolumeFile.hpp
SystemsAndChangesCreation/SystemCreation/: SystemCreation.cpp  VolumeFile.hpp
SystemsAndChangesCreation/TraceParser/: Config.cpp  Config.hpp  TraceFile.cpp  TraceFile.hpp  TraceParser.cpp  run_trace_parser.py
SystemsAndChangesCreation/TraceParser/scripts/: check_for_host_with_different_users.py  filter_all_generated_files.py  run_system_creation.py  run_trace_parser.py  trace_analysis.py  trace_filter.py  trace_generator.py  traces_summary.py  volumes_split_creator.py
SystemsAndChangesCreation/TraceParser/scripts/snaps_utils/: snaps_filters.py  snaps_loader.py
SystemsAndChangesCreation/TraceParser/scripts/volumes_spliters/: by_date.py  by_users.py  by_users_adv.py  general.py
SystemsAndChangesCreation/UnionFSFiles/: Config.cpp  FSUnioner.cpp  FSUnioner.hpp  FsFile.cpp  UnionFsFiles.cpp
UBC-based-systems/Common/: Config.cpp  Utility.cpp
UBC-based-systems/SystemCreation/: SystemCreationSummary.cpp  VolumeFile.cpp
UBC-based-systems/TraceParser/: TraceFile.cpp
UBC-based-systems/TraceParser/scripts/: extract_files.py
UBC-based-systems/TraceParser/scripts/volumes_spliters/: by_os.py
UBC-based-systems/UnionFSFiles/: Config.hpp  FSFile.hpp
